<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.entrepreplancer</groupId>
	<artifactId>Entreportal</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Entreportal</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>8</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<!--<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency> -->
		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>42.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-security</artifactId>
		    <version>2.7.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.13.2</version>
		    <scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
		<plugin>
			    <groupId>com.github.eirslett</groupId>
				<artifactId>frontend-maven-plugin</artifactId>
				<configuration>
				<workingDirectory>src/main/lancer</workingDirectory>
				        <installDirectory>target</installDirectory>
				        <nodeVersion>v18.2.0</nodeVersion>
				</configuration>
				    <executions>
				        <execution>
				        <id>Install node and npm</id>
				           <goals>
				             <goal>install-node-and-npm</goal>
				           </goals>
				           <phase>generate-resources</phase>
				           <configuration>
				              <nodeVersion>v18.2.0</nodeVersion>
				              <npmVersion>8.9.0</npmVersion>
				           </configuration>
				        </execution>
				           
				         <execution>
				          <id>npm install</id>
				          <goals>
				          	<goal>npm</goal>
				          </goals>
				          <phase>generate-resources</phase>
				          <configuration>
				             <arguments>install</arguments>
				          </configuration>
				        </execution>
				        <execution>
				           <id>npm run build</id>
				           <goals>
				             <goal>npm</goal>
				           </goals>
				           <phase>generate-resources</phase>
				           <configuration>
				              <arguments>run build</arguments>
				           </configuration>
				        </execution>
				    </executions>
				</plugin>
				<plugin>
				  <artifactId>maven-antrun-plugin</artifactId>
				  <executions>
				    <execution>
				      <phase>generate-resources</phase>
				      <configuration>
				        <target>
				          <copy todir="${project.build.directory}/classes/public">
				             <fileset dir="${project.basedir}/src/main/lancer/build"></fileset>
				          </copy>
				        </target>
				      </configuration>
				      <goals>
				        <goal>run</goal>
				      </goals>
				    </execution>
				  </executions>
				</plugin>
				<plugin>
				
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>>	
					</excludes>
					
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
